packages/preview/hei-synd-report/0.1.1/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

## [0.1.1] - 2025-02-24

### 🚀 Features

- *(toml)* Add minimum compiler version 0.13.0
- *(telemetry)* Visitor count

### 🐛 Bug Fixes

- *(README)* Release Badge
- *(just)* Fix justfile for pdf generation
- *(typst)* Add link to new version hei-synd-report:0.1.1
- *(package)* Latest version of glossarium and fracturist
- *(typst)* Compatibility with typst 0.13.0
- *(telemetry)* Visitorbadge
- *(tianji)* Link to tianji
- *(tianji)* Link to tianji
- *(tianji)* Link to tianji

### 💼 Other

- Merge remote-tracking branch 'origin/main'

## [0.1.0] - 2025-01-30

### 🚀 Features

- *(template)* Initial commit

### 🐛 Bug Fixes

- *(README)* Links to various resources
- *(just)* Changelog recipies
- *(convention)* Fixed small issues indicated by the typst convention
- *(superfluous)* Remove files which are not needed

### 📚 Documentation

- *(README)* Add metadata.typ description
- *(chapter)* Description of the content of chapters

### ⚙️ Miscellaneous Tasks

- *(metadata)* Comments
- *(README)* Minor modifications
- *(just)* Add local preview test possibility
- *(release)* 0.1.0
- *(typst.toml)* Remove exclude since it is handeled in the typst package fork

<!-- generated by git-cliff -->
