packages/preview/hei-synd-report/0.2.0/CHANGELOG.md
# Changelog

All notable changes to this project will be documented in this file.

## [0.2.0] - 2026-03-13

### 🚀 Features

- *(package)* Add hei-synd-thesis as package, bump packages versions ([e3b1cf3](https://github.com/hei-templates/hei-synd-report/commit/e3b1cf3970b9648f8f5290a4a8d2d641cb100052) - zas)
- *(inputs)* Add sys inputs ([6ac3610](https://github.com/hei-templates/hei-synd-report/commit/6ac36104e72bca9c6453b197aebfdd3900794a3b) - zas)

### 🐛 Bug Fixes

- *(tianji)* Telemetry link ([8aade4d](https://github.com/hei-templates/hei-synd-report/commit/8aade4d0b350f7ef39f9060da49d2218143b974c) - zas)
- *(links)* Some renaming was missing from thesis to report ([09e727a](https://github.com/hei-templates/hei-synd-report/commit/09e727a6adc4c1eda3c8a8db5d9d24248d132476) - zas)
- *(imports)* Remove unnecessary imports, all combined in metadata ([e9cc03c](https://github.com/hei-templates/hei-synd-report/commit/e9cc03ca68ce9dc3b7ee4f355ddd51fa36ec63cb) - zas)

### 🚜 Refactoring

- *(template)* Added urls for major and orientation. fixes link problems. changes some styles ([8c7d03b](https://github.com/hei-templates/hei-synd-report/commit/8c7d03bd7dc07b3655cd84951d77f9a24d7b9cf9) - zas)

### ⚙️ Miscellaneous Tasks

- *(ci)* Add ci/cd workflows ([996c819](https://github.com/hei-templates/hei-synd-report/commit/996c81927cbd6b84f15ff5406250357bea5fa3a8) - zas)
- *(ignore)* Add .gitignore and .lycheeignore ([0bbb701](https://github.com/hei-templates/hei-synd-report/commit/0bbb701e76b2afe11b4ca44658029870beefc28c) - zas)
- *(readme)* Update readme and added CONTRIBUTING.md ([8bf0d01](https://github.com/hei-templates/hei-synd-report/commit/8bf0d0166b621adeba155d29c354d7f2023ba55f) - zas)
- *(just)* Macos and linux compatibility, link unlink package recipes, copy-release recipe, fixed problems in pdf generation, set-version recipe ([5552696](https://github.com/hei-templates/hei-synd-report/commit/555269699b231bfa41776df890a2ad9b67337c75) - zas)
- *(cliff)* Unified git cliff config ([57a2f51](https://github.com/hei-templates/hei-synd-report/commit/57a2f51942cde3c4d8841b986884f2f395ad42bf) - zas)
- *(image)* Add new sample and thumbnails and additional pdf’s ([22ad627](https://github.com/hei-templates/hei-synd-report/commit/22ad627965bc449ffefdfcc21b0b8eabfb3eadeb) - zas)
- *(readme)* Add permalink for samples ([ec30f29](https://github.com/hei-templates/hei-synd-report/commit/ec30f296f657461de85ca4acbaa4e0fae86b8853) - zas)

**Full Changelog**: [0.1.1...0.2.0](https://github.com/hei-templates/hei-synd-report/compare/0.1.1...0.2.0)

## [0.1.1] - 2025-02-24

### 🚀 Features

- *(toml)* Add minimum compiler version 0.13.0
- *(telemetry)* Visitor count

### 🐛 Bug Fixes

- *(README)* Release Badge
- *(just)* Fix justfile for pdf generation
- *(typst)* Add link to new version hei-synd-report:0.1.1
- *(package)* Latest version of glossarium and fracturist
- *(typst)* Compatibility with typst 0.13.0
- *(telemetry)* Visitorbadge
- *(tianji)* Link to tianji
- *(tianji)* Link to tianji
- *(tianji)* Link to tianji

### 💼 Other

- Merge remote-tracking branch 'origin/main'

## [0.1.0] - 2025-01-30

### 🚀 Features

- *(template)* Initial commit

### 🐛 Bug Fixes

- *(README)* Links to various resources
- *(just)* Changelog recipies
- *(convention)* Fixed small issues indicated by the typst convention
- *(superfluous)* Remove files which are not needed

### 📚 Documentation

- *(README)* Add metadata.typ description
- *(chapter)* Description of the content of chapters

### ⚙️ Miscellaneous Tasks

- *(metadata)* Comments
- *(README)* Minor modifications
- *(just)* Add local preview test possibility
- *(release)* 0.1.0
- *(typst.toml)* Remove exclude since it is handeled in the typst package fork

<!-- generated by git-cliff -->
